--- a/app/styles/components/login-home.css
+++ b/app/styles/components/login-home.css
@@ -16,7 +16,7 @@
   font-weight: 600;
   font-size: 14px;
   border: 1px solid var(--color-border);
-  width: 100%;
+  width: auto;  
   text-align: left;
 }
 
